<resources>
    <string name="app_name">Little Bits</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="number">.*\\d+.*</string>
    <string name="lowerCase">.*[a-z].*</string>
    <string name="upperCase">.*[A-Z].*</string>

    <string name="create_table">CREATE TABLE %1$s (_id INTEGER PRIMARY KEY, %2$s TEXT,%3$s TEXT )</string>
    <string name="delete_table">DROP TABLE IF EXISTS %1$s</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_game_menu">GameMenu</string>
    <string name="game_menu">Game Menu</string>
    <string name="tutorial">Tutorial</string>
    <string name="tutorial_percent">Tutorial %</string>
    <string name="beginner">Beginner</string>
    <string name="beginner_percent">Beginner %</string>
    <string name="advanced">Advanced</string>
    <string name="advanced_percent">Advanced %</string>
    <string name="expert">Expert</string>
    <string name="expert_percent">Expert %</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="title_activity_if_and_else_tutorial">IfAndElseTutorial</string>
    <string name="game_menu_title">Game Menu</string>
    <string name="percent_sign">%</string>
    <string name="tutorial_title">Tutorial</string>
    <string name="title_activity_for_loop_tutorial">for_loop_tutorial</string>
    <string name="title_activity_while_loop_tutorial">WhileLoopTutorial</string>
    <string name="title_activity_beginner">Beginner</string>
    <string name="title_activity_advanced">Advanced</string>
    <string name="title_activity_expert">Expert</string>
    <string name="title_activity_beginner_if_and_else_menu">BeginnerIfAndElseMenu</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="LittleBitsLogo">Little Bits Logo</string>
    <string name="Image_of_a_Kid_and_Robot">Image of a Kid and Robot</string>
    <string name="title_activity_beginner_for_loops">BeginnerForLoops</string>
    <string name="title_activity_advanced_if_and_else_menu">AdvancedIfAndElseMenu</string>
    <string name="title_activity_advanced_for_loops">AdvancedForLoops</string>
    <string name="title_activity_advanced_while_loops">AdvancedWhileLoops</string>
    <string name="title_activity_expert_if_and_else">ExpertIfAndElse</string>
    <string name="title_activity_expert_for_loops">ExpertForLoops</string>
    <string name="title_activity_expert_while_loops">ExpertWhileLoops</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_winning_screen">WinningScreen</string>
    <string name="title_activity_losing_screen">LosingScreen</string>
    <string name="unwatched">Unwatched</string>
    <string name="watched">Already Seen</string>
    <string name="Finished">Finished!</string>
</resources>
